# i18n-jinja-fastapi

./: LICENSE.txt  README.md  pyproject.toml
src/core/: config.py  utils.py
src/i18n_jinja_fastapi/: __about__.py  main.py
src/static/languages/: de.json  en.json
src/templates/: index.html
tests/: __init__.py
