[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "i18n-jinja-fastapi"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "jaecheon12", email = "hijde@tvcf.co.kr" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = []

[project.urls]
Documentation = "https://github.com/unknown/i18n-jinja-fastapi#readme"
Issues = "https://github.com/unknown/i18n-jinja-fastapi/issues"
Source = "https://github.com/unknown/i18n-jinja-fastapi"

[tool.hatch.version]
path = "src/i18n_jinja_fastapi/__about__.py"

[tool.hatch.envs.default]
dependencies = [
  "coverage[toml]>=6.5",
  "pytest",
]
[tool.hatch.envs.default.scripts]
dev = "uvicorn i18n_jinja_fastapi.main:app --reload"
test = "pytest {args:tests}"
test-cov = "coverage run -m pytest {args:tests}"
cov-report = [
  "- coverage combine",
  "coverage report",
]
cov = [
  "test-cov",
  "cov-report",
]

[[tool.hatch.envs.all.matrix]]
python = ["3.8", "3.9", "3.10", "3.11", "3.12"]

[tool.hatch.envs.types]
dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/i18n_jinja_fastapi tests}"

[tool.coverage.run]
source_pkgs = ["i18n_jinja_fastapi", "tests"]
branch = true
parallel = true
omit = [
  "src/i18n_jinja_fastapi/__about__.py",
]

[tool.coverage.paths]
i18n_jinja_fastapi = ["src/i18n_jinja_fastapi", "*/i18n-jinja-fastapi/src/i18n_jinja_fastapi"]
tests = ["tests", "*/i18n-jinja-fastapi/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
